--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home">Home</string>
     <string name="category">Category</string>
     <string name="favorite">Favorite</string>
+    <string name="error_connect">Connect error</string>
 </resources>
