--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,10 @@
     <string name="title_trailer">Trailer</string>
     <string name="title_casts">Casts</string>
     <string name="title_reviews">Reviews</string>
+    <string name="title_search">Search</string>
     <string name="title_add_to_wishlist">Add to wishlist</string>
     <string name="title_remove_to_wishlist">Remove to wishlist</string>
+    <string name="action_retry">Retry</string>
     <string name="msg_add_to_wishlist">Adding to wishlist...</string>
     <string name="msg_remove_to_wishlist">Removing to wishlist...</string>
 </resources>
