--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="title_revenue">Revenue</string>
     <string name="title_add_to_wishlist">Add to wishlist</string>
     <string name="title_remove_to_wishlist">Remove to wishlist</string>
+    <string name="title_production_companies">Production Companies</string>
     <string name="action_retry">Retry</string>
     <string name="msg_add_to_wishlist">Adding to wishlist...</string>
     <string name="msg_remove_to_wishlist">Removing to wishlist...</string>
