update UI main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="title_popular">Popular</string>
     <string name="title_toprated">Top Rated</string>
     <string name="title_now_playing">Now Playing</string>
-    <string name="title_coming">Coming</string>
+    <string name="title_upcoming">UpComing</string>
     <string name="title_overview">Overview</string>
     <string name="title_view_more">More</string>
     <string name="title_trailer">Trailer</string>
